Fixed start time form alignment.

--- a/main.css
+++ b/main.css
@@ -67,6 +67,10 @@ li{
 	margin-top: 5%;
 }
 
+.form-align {
+	margin-left: 2.5%;
+}
+
 .ratio-box {
 	margin-top: 5%;
 	height: 90px;
